--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,28 @@
     <Button android:onClick="stopTimer" android:text="@string/main_button_stop" android:layout_width="180dp" android:layout_height="wrap_content" android:id="@+id/button2"
         tools:layout_constraintRight_creator="1" tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent" android:layout_marginBottom="16dp" />
+        app:layout_constraintRight_toRightOf="parent" android:layout_marginBottom="16dp"
+    />
     <TextView android:text="@string/main_t_status" android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:id="@+id/textView_status" tools:layout_constraintTop_creator="1" android:layout_marginStart="16dp"
         android:layout_marginTop="16dp" tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
+    />
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView_status_text"
         tools:layout_constraintTop_creator="1" android:layout_marginStart="17dp" android:layout_marginTop="16dp"
         tools:layout_constraintLeft_creator="1" app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView_status" />
+        app:layout_constraintLeft_toRightOf="@+id/textView_status"
+    />
+    <TextView android:text="@string/main_t_target" android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:id="@+id/textView" tools:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/textView_status" tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/textView_status" android:layout_marginTop="10dp"
+    />
+    <EditText android:textSize="15sp" android:layout_width="43dp" android:layout_height="40dp" android:inputType="text"
+        android:text="@string/main_ti_target" android:ems="10" android:id="@+id/editText_target" tools:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/textView_status_text" tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/textView_status_text"
+    />
+
 
 </android.support.constraint.ConstraintLayout>
