Add text-field for start-date. Improve layout-logic.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,45 +21,75 @@
         android:id="@+id/textView_status" tools:layout_constraintTop_creator="1" android:layout_marginStart="16dp"
         android:layout_marginTop="16dp" tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
+              android:layout_marginLeft="16dp"/>
+
+    <TextView android:text="@string/main_t_target" android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/textView_target" tools:layout_constraintTop_creator="1"
+              app:layout_constraintTop_toBottomOf="@+id/textView_status" tools:layout_constraintLeft_creator="1"
+              app:layout_constraintLeft_toLeftOf="@+id/textView_status" android:layout_marginTop="16dp"
     />
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView_status_text"
-        tools:layout_constraintTop_creator="1" android:layout_marginStart="17dp" android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1" app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView_status"
-    />
-    <TextView android:text="@string/main_t_target" android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:id="@+id/textView" tools:layout_constraintTop_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/textView_status" tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView_status" android:layout_marginTop="10dp"
-        android:layout_marginLeft="0dp" />
-    <EditText android:textSize="15sp" android:layout_width="43dp" android:layout_height="40dp" android:inputType="text"
-        android:text="@string/main_ti_target" android:ems="10" android:id="@+id/editText_target" tools:layout_constraintTop_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/textView_status_text" tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView_status_text" android:layout_marginLeft="18dp"
-        android:layout_marginTop="0dp" />
+    <EditText android:textSize="15sp" android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:inputType="text"
+              android:text="@string/main_ti_target" android:ems="10" android:id="@+id/editText_target"
+              tools:layout_constraintTop_creator="1"
+              tools:layout_constraintLeft_creator="1"
+              android:layout_marginStart="32dp"
+              android:layout_marginLeft="32dp"
+              android:layout_marginBottom="0dp" app:layout_constraintLeft_toRightOf="@+id/textView_StartDate"
+              app:layout_constraintBaseline_toBaselineOf="@+id/textView_target"/>
+    <EditText android:textSize="15sp" android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:inputType="text"
+              android:ems="10"
+              tools:layout_constraintTop_creator="1"
+              tools:layout_constraintLeft_creator="1"
+              android:layout_marginStart="32dp"
+              android:id="@+id/textView_status_text"
+              android:layout_marginLeft="32dp"
+              app:layout_constraintLeft_toRightOf="@+id/textView_StartDate"
+              android:layout_marginTop="0dp"
+              app:layout_constraintBaseline_toBaselineOf="@+id/textView_status"/>
     <TextView android:text="@string/main_t_unit" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:id="@+id/textView_unit" tools:layout_constraintTop_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/textView_status" tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView_status" android:layout_marginTop="40dp"
-        android:layout_marginLeft="0dp"
-    />
-    <EditText android:textSize="15sp" android:layout_width="43dp" android:layout_height="40dp" android:inputType="text"
-        android:text="@string/main_ti_unit" android:ems="10" android:id="@+id/editText_unit"
-        tools:layout_constraintTop_creator="1" app:layout_constraintTop_toBottomOf="@+id/textView_status_text"
-        tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="@+id/textView_status_text"
-        android:layout_marginLeft="18dp" android:layout_marginTop="27dp"
-    />
+              android:layout_height="wrap_content" android:id="@+id/textView_unit"
+              tools:layout_constraintTop_creator="1"
+              app:layout_constraintTop_toBottomOf="@+id/textView_target" tools:layout_constraintLeft_creator="1"
+              android:layout_marginTop="15dp"
+              app:layout_constraintLeft_toLeftOf="@+id/textView_target"/>
+    <EditText android:textSize="15sp" android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:inputType="text"
+              android:text="@string/main_ti_unit" android:ems="10" android:id="@+id/editText_unit"
+              tools:layout_constraintTop_creator="1"
+              tools:layout_constraintLeft_creator="1"
+              android:layout_marginStart="32dp" tools:layout_editor_absoluteX="65dp" android:layout_marginTop="0dp"
+              app:layout_constraintLeft_toRightOf="@+id/textView_StartDate"
+              app:layout_constraintBaseline_toBaselineOf="@+id/textView_unit"/>
     <TextView android:text="@string/main_t_accepted" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:id="@+id/textView_accepted" tools:layout_constraintTop_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/textView_status" tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView_status" android:layout_marginTop="67dp"
-        android:layout_marginLeft="0dp"
-    />
-    <EditText android:textSize="15sp" android:layout_width="43dp" android:layout_height="40dp" android:inputType="text"
-        android:text="@string/main_ti_accepted" android:ems="10" android:id="@+id/editText_accepted"
-        tools:layout_constraintTop_creator="1" app:layout_constraintTop_toBottomOf="@+id/textView_status_text"
-        tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="@+id/textView_status_text"
-        android:layout_marginLeft="18dp" android:layout_marginTop="58dp"
-    />
+              android:layout_height="wrap_content" android:id="@+id/textView_accepted"
+              tools:layout_constraintTop_creator="1"
+              app:layout_constraintTop_toBottomOf="@+id/textView_unit" tools:layout_constraintLeft_creator="1"
+              android:layout_marginTop="16dp"
+              app:layout_constraintLeft_toLeftOf="@+id/textView_unit"/>
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content" android:id="@+id/textView_StartDate"
+              tools:layout_constraintTop_creator="1"
+              app:layout_constraintTop_toBottomOf="@+id/textView_accepted" tools:layout_constraintLeft_creator="1"
+              app:layout_constraintLeft_toLeftOf="@+id/textView_accepted" android:layout_marginTop="15dp"
+              android:text="@string/main_t_startDate"/>
+    <EditText android:textSize="15sp" android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:inputType="text"
+              android:text="@string/main_ti_accepted" android:ems="10" android:id="@+id/editText_accepted"
+              tools:layout_constraintTop_creator="1"
+              tools:layout_constraintLeft_creator="1"
+              android:layout_marginStart="32dp"
+              app:layout_constraintLeft_toRightOf="@+id/textView_StartDate" android:layout_marginLeft="32dp"
+              android:layout_marginBottom="0dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView_accepted"/>
+    <EditText android:textSize="15sp" android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:inputType="text"
+              android:ems="10" android:id="@+id/editText_startDate"
+              tools:layout_constraintTop_creator="1"
+              tools:layout_constraintLeft_creator="1"
+              android:layout_marginStart="32dp"
+              app:layout_constraintLeft_toRightOf="@+id/textView_StartDate" android:layout_marginLeft="32dp"
+              android:layout_marginBottom="0dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView_StartDate"/>
 
 </android.support.constraint.ConstraintLayout>
